setup for eslint and prettier

--- a/package.json
+++ b/package.json
@@ -12,12 +12,21 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "bun build ./src/index.ts --outdir ./dist --target node && bun build ./src/index.ts --outdir ./dist/cjs --target node --format cjs",
-    "test": "bun test"
+    "test": "bun test",
+    "lint": "eslint src --ext .ts",
+    "format": "prettier --write ."
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@eslint/js": "^9.26.0",
+    "@types/bun": "latest",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.31.0",
+    "globals": "^16.1.0",
+    "prettier": "^3.5.3",
+    "typescript-eslint": "^8.32.1"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
