--- a/package.json
+++ b/package.json
@@ -12,19 +12,23 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "bun build ./src/index.ts --outdir ./dist --target node && bun build ./src/index.ts --outdir ./dist/cjs --target node --format cjs",
-    "test": "bun test",
     "lint": "eslint src --ext .ts",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
     "@types/bun": "latest",
+    "@vitest/coverage-istanbul": "^3.1.3",
+    "@vitest/ui": "^3.1.3",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.31.0",
     "globals": "^16.1.0",
     "prettier": "^3.5.3",
-    "typescript-eslint": "^8.32.1"
+    "typescript-eslint": "^8.32.1",
+    "vitest": "^3.1.3"
   },
   "peerDependencies": {
     "typescript": "^5.8.3"
